--- a/FIT5032_Assignment/Views/Clinics/Index.cshtml
+++ b/FIT5032_Assignment/Views/Clinics/Index.cshtml
@@ -24,64 +24,72 @@
     <p>Address: @Model.Address</p>
 </div>
 <hr>
-<table class="table w-100" id="patient-appointment-table">
-    <thead>
-        <tr>
-            <th id="selectAllArea">
-                All Email
-                <input type="checkbox" id="selectAll" />
-            </th>
-            <th>Appointment Date</th>
-            <th>Start Time</th>
-            <th>Title</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Phone Number</th>
-            <th>Email</th>
-            <th>Gender</th>
-            <th>Birthday</th>
-            <th>IsConfirmed</th>
-            <th>Note</th>
-        </tr>
-    </thead>
 
-    <tbody>
-        @foreach (var appointment in Model.Appointments)
-        {
-            <tr class="border-1 border shadow-sm border-end border-start-0 border-bottom border-top">
-                <td class="eachemail">
-                    <input type="checkbox" name="selectedEmails" value="@appointment.Email" class="emailCheckbox" />
-                </td>
-                <td>@appointment.AppointmentDate.ToShortDateString()</td>
-                <td>@appointment.StartTime.ToShortTimeString()</td>
-                <td>@appointment.Title</td>
-                <td>@appointment.FirstName</td>
-                <td>@appointment.LastName</td>
-                <td>@appointment.PhoneNumber</td>
-                <td>@appointment.Email</td>
-                <td>@appointment.Gender</td>
-                <td>@appointment.Birthday.ToShortDateString()</td>
-                <td>@(appointment.IsConfirmed ? "Yes" : "No")</td>
-
-                <td>@appointment.Note</td>
-                <td>
-                    @Html.ActionLink("Details", "PatientAppointmentDetails", new { id = appointment.AppointmentId }, new { @class = "" })
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", "Appointments", new { id = appointment.AppointmentId }, new { @class = "" })
-                </td>
-                <td>
-                    @Html.ActionLink("Upload File", "Create", "Images", new { id = appointment.AppointmentId }, null)
-                </td>
-                <td>
-                    @Html.ActionLink("Delete", "Delete", "Appointments", new { id = appointment.AppointmentId }, null)
-                </td>
-
+<div class="table-container pb-3 mb-3">
+    <table class="table w-100 " id="patient-appointment-table">
+        <thead>
+            <tr>
+                <th id="selectAllArea">
+                    All Email
+                    <input type="checkbox" id="selectAll" />
+                </th>
+                <th>Appointment Date</th>
+                <th>Start Time</th>
+                <th>Title</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Phone Number</th>
+                <th>Email</th>
+                <th>Gender</th>
+                <th>Birthday</th>
+                <th>IsConfirmed</th>
+                <th>Note</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
 
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+
+        <tbody>
+            @foreach (var appointment in Model.Appointments)
+            {
+                <tr class="border-1 border shadow-sm border-end border-start-0 border-bottom border-top">
+                    <td class="eachemail">
+                        <input type="checkbox" name="selectedEmails" value="@appointment.Email" class="emailCheckbox" />
+                    </td>
+                    <td>@appointment.AppointmentDate.ToShortDateString()</td>
+                    <td>@appointment.StartTime.ToShortTimeString()</td>
+                    <td>@appointment.Title</td>
+                    <td>@appointment.FirstName</td>
+                    <td>@appointment.LastName</td>
+                    <td>@appointment.PhoneNumber</td>
+                    <td>@appointment.Email</td>
+                    <td>@appointment.Gender</td>
+                    <td>@appointment.Birthday.ToShortDateString()</td>
+                    <td>@(appointment.IsConfirmed ? "Yes" : "No")</td>
+
+                    <td>@appointment.Note</td>
+                    <td>
+                        @Html.ActionLink("Details", "PatientAppointmentDetails", new { id = appointment.AppointmentId }, new { @class = "" })
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", "Appointments", new { id = appointment.AppointmentId }, new { @class = "" })
+                    </td>
+                    <td>
+                        @Html.ActionLink("Upload File", "Create", "Images", new { id = appointment.AppointmentId }, null)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Delete", "Delete", "Appointments", new { id = appointment.AppointmentId }, null)
+                    </td>
+
+
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
 @if (TempData["SuccessExport"] != null)
 {
@@ -121,6 +129,8 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Scripts/tinymce/tinymce.min.js"></script>
     <script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
     <script>
         //chart start
         window.onload = function () {
@@ -158,19 +168,19 @@
 
 
         //chart end
+
+
         //select emial start
         function updateEmailTextbox() {
-            var selectedEmails = [];
+            var selectedEmailsSet = new Set(); // Initialize a set for unique values
 
             $('.emailCheckbox:checked').each(function () {
-                selectedEmails.push($(this).val());
+                selectedEmailsSet.add($(this).val()); // Add email to the set
             });
 
-            var uniqueEmailsSet = new Set(selectedEmails);
-
-            var uniqueEmailsArray = Array.from(uniqueEmailsSet);
-            $('#Useremail').val(uniqueEmailsArray.join(';'));
+            $('#Useremail').val(Array.from(selectedEmailsSet).join(';'));
         }
+
 
         $('#selectAll').on('change', function () {
             var isChecked = $(this).is(':checked');
@@ -179,25 +189,22 @@
         });
 
         $('.emailCheckbox').on('change', function () {
-            if (!$(this).is(':checked') && $('#selectAll').is(':checked')) {
-                $('#selectAll').prop('checked', false);
-            }
+            var totalCheckboxes = $('.emailCheckbox').length;
+            var checkedCheckboxes = $('.emailCheckbox:checked').length;
+
+            $('#selectAll').prop('checked', totalCheckboxes === checkedCheckboxes);
             updateEmailTextbox();
         });
+
 
         $('.send-email').on('click', function () {
             $('#email-area').show();
             $('#selectAllArea').show();
             $('.eachemail').show();
 
-            var selectedEmails = [];
-
-            $('.emailCheckbox:checked').each(function () {
-                selectedEmails.push($(this).val());
-            });
-
-            $('#Useremail').val(selectedEmails.join('; '));
+            updateEmailTextbox();
         });
+
 
         //select emial end
 
@@ -239,6 +246,18 @@
         });
 
         //tabs end
+
+        //datatable start
+        $('#patient-appointment-table').DataTable({
+            responsive: true,
+            pageLength: 10,
+            lengthChange: false,
+            columnDefs: [
+                { orderable: false, targets: [0, 12, 13, 14, 15] }
+            ]
+        });
+
+        //datatable end
 
     </script>
     <style>
@@ -301,10 +320,15 @@
             border-top: none;
         }
 
-        #patient-appointment-table {
-            max-height: 600px;
-            overflow-y: auto;
-            display: block;
+        .table-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
+            .table {
+                margin-left: auto;
+                margin-right: auto;
+            }
+
     </style>
 }
