--- a/FIT5032_Assignment/Views/Clinics/Index.cshtml
+++ b/FIT5032_Assignment/Views/Clinics/Index.cshtml
@@ -17,6 +17,14 @@
         @TempData["ErrorMessage"]
     </div>
 }
+@if (TempData["SuccessUpolad"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessUpolad"]
+    </div>
+}
+
+
 
 
 <div>
