--- a/FIT5032_Assignment/Views/FeedbackAndRatings/Create.cshtml
+++ b/FIT5032_Assignment/Views/FeedbackAndRatings/Create.cshtml
@@ -8,7 +8,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "FeedbackAndRatings", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
@@ -17,65 +17,66 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="row m-0 p-0">
-            <div class="form-group">
-                @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10" id="rating-star">
-                    <span class="star" data-rating="1">&#9734;</span>
-                    <span class="star" data-rating="2">&#9734;</span>
-                    <span class="star" data-rating="3">&#9734;</span>
-                    <span class="star" data-rating="4">&#9734;</span>
-                    <span class="star" data-rating="5">&#9734;</span>
-                    @Html.HiddenFor(model => model.Rating, new { id = "ratingValue" })
-                    <span id="ratingDisplay" class="ml-2"></span>
-                    @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group ">
-                @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-12 col-md-6">
-                    @Html.TextAreaFor(model => model.Comment, new { @class = "form-control textarea-width", @rows = "5", @maxlength = "500", @style = "resize: none;" })
-                    @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
+    <div class="row m-0 p-0">
+        <div class="form-group">
+            @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10" id="rating-star">
+                <span class="star" data-rating="1">&#9734;</span>
+                <span class="star" data-rating="2">&#9734;</span>
+                <span class="star" data-rating="3">&#9734;</span>
+                <span class="star" data-rating="4">&#9734;</span>
+                <span class="star" data-rating="5">&#9734;</span>
+                @Html.HiddenFor(model => model.Rating, new { id = "ratingValue" })
+                <span id="ratingDisplay" class="ml-2"></span>
+                @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group ">
+            @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-12 col-md-6">
+                @Html.TextAreaFor(model => model.Comment, new { @class = "form-control textarea-width", @rows = "5", @maxlength = "500", @style = "resize: none;" })
+                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        @Html.HiddenFor(model => model.AppointmentId)
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "UserAppointments","Appointments")
+    @Html.ActionLink("Back to List", "UserAppointments", "Appointments")
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Styles.Render("~/Content/css")
     @Styles.Render("~/CustomerJsCss/css.css")
-<script>
-    const $stars = $("#rating-star .star");
+    <script>
+        const $stars = $("#rating-star .star");
 
-    $stars.click(function () {
-        let rating = $(this).data("rating");
-        $("#ratingValue").val(rating);
-        $("#ratingDisplay").text("Selected Rating: " + rating); // Displaying the selected rating
-        updateStars(rating);
-    });
-
-    function updateStars(rating) {
-        $stars.each(function () {
-            if ($(this).data("rating") <= rating) {
-                $(this).text('\u2605'); // Filled star
-            } else {
-                $(this).text('\u2606'); // Empty star
-            }
+        $stars.click(function () {
+            let rating = $(this).data("rating");
+            $("#ratingValue").val(rating);
+            $("#ratingDisplay").text("Selected Rating: " + rating); // Displaying the selected rating
+            updateStars(rating);
         });
-    }
+
+        function updateStars(rating) {
+            $stars.each(function () {
+                if ($(this).data("rating") <= rating) {
+                    $(this).text('\u2605'); // Filled star
+                } else {
+                    $(this).text('\u2606'); // Empty star
+                }
+            });
+        }
     </script>
 
 }
