--- a/FIT5032_Assignment/Views/Appointments/Edit.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Edit.cshtml
@@ -17,6 +17,8 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.AppointmentId)
+    @Html.HiddenFor(model => model.UserId)
+
 
     <div class="form-group ">
         @Html.LabelFor(model => model.ScanPart, new { @class = "control-label col-md-2" })
